2000-07-05  Radek Doulik  <rodo@helixcode.com>

	* patch from LotR applied

	* htmlengine-edit-selection-updater.c (updater_idle_callback):
	disable selection if mark and cursor have the same position

2000-07-05  Dan Winship  <danw@helixcode.com>

	* htmllinktextmaster.c (save): 
	* htmllinktext.c (save): 
	* htmltext.c (save, save_plain): Fix calls to
	html_engine_save_output_string to be safe when the text contains
	%-signs.

2000-07-05  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.c (load_keybindings): when keybindings file not found,
	bind default bindings anyway

	* htmlengine-edit-fontstyle.c (html_engine_set_font_style): I have
	problems with font style setting, so I have implemented quick
	replacement, which uses cut&paste

	* htmlengine-edit-delete.c (delete_different_parent): set pnext
	before removing p from parent

	* htmlengine-edit-paste.c (merge_possibly): remove empty text
	objects here, this fixes well known magic links bug
	(do_paste): try to merge for all pasted objects, this simplifies
	cut&paste commands (they do not need try to merge by itself)
	(prepare_clueflows): do split_first_clueflow_at_cursor also when
	append is TRUE

	* htmlengine-edit-insert.c (equal_insertion): fixed case when
	target is NULL

	* htmlengine-edit-paste.c (split_first_clueflow_at_cursor):
	simplified, use only append_after (it will call prepend if needed)
	(prepend_object): likewise

	* htmlengine-edit-insert.c (insert_chars_different_style): don't
	split text when inserting on end of it (where offset == text_len)
	so we don't get empty link/textmasters any more
	(insert_chars_at_not_text): simplified, use only append_after (it
	will call prepend if needed)

	* htmlclue.c (html_clue_append_after): when where == NULL then
	call html_clue_prepend instead

2000-07-04  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-text.c (upper_lower): removed quick selection
	bug fix
	(html_engine_capitalize_word): also make tail of word lowercase